syntax = "proto3";

package service;

option go_package = "gorm_test/rpc_client/proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}